@@ -1,5 +1,11 @@
 # $Id$
 
+* primitives refactoring:
+form2object: maybe always use getValue, why lists are special?
+define SimpleType and ComplexType interfaces (to use setter or dropper in b/o)
+anonymous primitives (split fields and types)
+make uniform lists: PrimitiveList()->of(AnonymousPrimitive)
+
 * sync xsd/dto generation stuff with 0.10 (sherman)
 
 * ClassUtils::dtoObject2xml, ClassUtils::xml2dtoObject from 0.10 (sherman)
