@@ -205,6 +205,8 @@
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'IO'.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Logging'.PATH_SEPARATOR
 		
+		.ONPHP_MAIN_PATH.'Application'	.PATH_SEPARATOR
+		
 		.ONPHP_META_CLASSES.PATH_SEPARATOR
 		
 	/*
